Initial working version of mdct.
Implemented sample generator and mdct test driver.
Fixed bugs in mdct kernel.
Factored out common OpenCL helper functions.

--- a/fft/SConscript
+++ b/fft/SConscript
@@ -1,9 +1,8 @@
-env = Environment()
-env.ParseConfig('pkg-config --cflags --libs glib-2.0')
-env.ParseConfig('pkg-config --cflags --libs fftw3')
+Import('env')
 
-env.Append( LIBS = 'OpenCL', CPPDEFINES = 'PROFILING' )
+localenv = env.Clone()
+
+env.ParseConfig('pkg-config --cflags --libs fftw3')
 
 env.Program( target='fft', source=["main.cpp"] )
 env.Program( target='fft_fftw', source=["fft_test_fftw.c"] )
-
