Implemented perf testing for MDCT and FFT.

--- a/tests/SConscript
+++ b/tests/SConscript
@@ -8,7 +8,11 @@ localenv = env.Clone()
 mdct_test = localenv.Program('mdct_test', ['mdct_test.c', 'mdct_vorbis.c', libmdct, libcommon])
 fft_test = localenv.Program('fft_test', ['fft_test.c', libfft, libcommon])
 mdct_fft_cpu = localenv.Program('mdct_fft_cpu', ['mdct_fft_trial.c', libcommon])
+fftperf = localenv.Program('fftperf', ['fft_perf.c', libfft, libcommon])
+mdctperf = localenv.Program('mdctperf', ['mdct_perf.c', 'mdct_vorbis.c', libmdct, libcommon])
 
 localenv.Install('#/build', mdct_test)
 localenv.Install('#/build', fft_test)
 localenv.Install('#/build', mdct_fft_cpu)
+localenv.Install('#/build', fftperf)
+localenv.Install('#/build', mdctperf)
